# Http-Cerver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.toml
certs/: server.crt  server.key
includes/: config.h  logging.h  proxy.h  secure_con.h  server.h
includes/http/: parser.h  responce.h  responce_headers.h  status_codes.h
public/: test.html
public/www/: index.html  style.css
public/www/css/: 404.css  style.css
public/www/html/: 404.html  index.html
scripts/: certs_gen.sh  format.sh
src/: config.c  logging.c  main.c  proxy.c  secure_con.c  server.c
src/http/: parser.c  responce.c  responce_headers.c
